# Secure_Sync_Shield

./: BackEnd.cpp  BackEnd.h  FinalVersion.pro  FinalVersion.pro.user.1418e8e  QDashBoard_RPI.pro  README.md  client_config.json  main.cpp  main.qml  qml.qrc
App2/: .cproject  App2FinalServoandAvoid.ioc
App2/Core/Inc/: stm32f4xx_it.h
App2/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
App2/Debug/: App2FinalServoandAvoid.elf  App2FinalServoandAvoid.list  App2FinalServoandAvoid.map
Application/: README.md
Application/Application1/: .cproject  .project  App1final Debug.launch  App1final.ioc
Application/Application1/Debug/: App1final.elf  App1final.list  makefile
Application/Application2/: App2FinalServoandAvoid Debug.launch  App2FinalServoandAvoid.ioc
Application/Application2/Debug/: App2FinalServoandAvoid.map
Application1/: .cproject  .project  Applicationfinal1 Debug.launch  Applicationfinal1.ioc
Application1/Core/Src/: main.c
Application1/Debug/: App1final.map  Applicationfinal1.elf  Applicationfinal1.list  Applicationfinal1.map  makefile
Application2/: .cproject  .project  App2FinalServoandAvoid Debug.launch  App2FinalServoandAvoid.ioc  STM32F401RCTX_FLASH.ld
Application2/Core/Inc/: stm32f4xx_it.h
Application2/Core/Src/: main.c  stm32f4xx_hal_msp.c  system_stm32f4xx.c
Application2/Debug/: App2FinalServoandAvoid.elf  App2FinalServoandAvoid.list  App2FinalServoandAvoid.map  makefile
Bootloader/: README.md
Bootloader/APP1/: .cproject  .project  APP1.ioc  APP1.launch  STM32F401CCUX_FLASH.ld
Bootloader/APP1/Debug/: APP1.elf  APP1.list  APP1.map  makefile
Bootloader/BootLoader/: .cproject  .mxproject  BootLoader.ioc  BootLoader.launch  STM32F401CCUX_FLASH.ld
Bootloader/BootLoader/Debug/: BootLoader.elf  BootLoader.list  BootLoader.map  makefile  objects.list
DashBoard/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
DashBoard/Backend/headers/: InstallManager.h  UpdateManager.h
DashBoard/Backend/source/: InstallManager.cpp  UpdateManager.cpp
DashBoard/ui/LeftColumn/: LeftColumn.qml
DashBoard/ui/RightScreen/: RightScreen.qml
DashBoard/ui/Top Bar/: TopBar.qml
DashBoard/ui/components/: DateTime.qml  Diagnosis.qml  WifiManagerComponent.qml
DashBoard/ui/components/DiagScreens/: DiagHomeScreen.qml
Security_Scripts/: README.md
Security_Scripts/for_pc/: download.py  upload.py
Security_Scripts/for_pc/forPC/: download.py
conf/: bblayers.conf  local.conf
for_pc/forPC/: upload.py
in_rspi/: download.py
in_rspi/forRS/: download.py
meta-secure-sync-shield/recipes-secure/autostart/: autostart_1.0.0.bb
meta-secure-sync-shield/recipes-secure/guiboard/: guiboard_1.0.0.bb
meta-secure-sync-shield/recipes-secure/qtbase/: qtbase_%.bbappend
meta-secure-sync-shield/recipes-secure/secure-sync-shield/: secure-sync-shield.bb
ui/RightScreen/: RightScreen.qml
ui/components/: DateTime.qml  Diagnosis.qml  TopBar.qml  Weather.qml
vsomeip/Mocking client/: CMakeLists.txt
vsomeip/Our server/: CMakeLists.txt  readme.txt
vsomeip/Our server/src/: server_config.json  server_example.cpp
yocto/: README.md
yocto/conf/: bblayers.conf  local.conf  raspberrypi3-64.qemuboot.conf
(+61 files in other folders)
